# bandsoft_ana

./: .gitignore  CMakeLists.txt
background/: CMakeLists.txt  event_mixing.cpp  event_mixing_tof.cpp
bad_bars/: CMakeLists.txt  compare_xdist.cpp  plot_chi2s.py
correction/: CMakeLists.txt
correction/inclusive/: CMakeLists.txt  bin_migration_inclusive.cpp  radiative_inclusive.cpp  raw_yield_inclusive.cpp
correction/point_cs/: BANDxs.py  F1F209.F  README.txt  data_bin_avgpoints.txt  data_bin_avgpoints_pointcs.txt  deuteron.csv  sim_bin_avgpoints.txt  sim_bin_avgpoints_pointcs.txt
correction/tagged/: CMakeLists.txt  bin_centering_tagged.cpp  bin_migration.cpp  bin_migration_tagged.cpp  bin_points.cpp  radiative.cpp  radiative_tagged.cpp  raw_yield.cpp  raw_yield_tagged.cpp
data_sim/: .yield_ratio.cpp.swp  CMakeLists.txt  absolute_norm_inc.cpp  fiducial_study.cpp  inclusive_plots.py  tag_inc_ratio.cpp  yield_ratio.cpp  yield_ratio_mcvsmc.cpp  yield_ratio_virt.cpp
doubleratio/: CMakeLists.txt  good_events.cpp  good_events_inc.cpp  good_events_noBG.cpp  good_events_noBG_noTClone.cpp  make_histograms.cpp  plotRatio.C  ratios_corrected.cpp  v0.cpp  v0_noBG.cpp  v0_noBG_noTClone.cpp
doubleratio/new_plots/: datasim_xbxp_plot.C  must_plot.C  pn_xbxp_plot.C  q2_xpas_plot.C  wp_xpas_plot.C
efficiency/: CMakeLists.txt  calc_eff.cpp  resolution.cpp  skim_efficiency.cpp
final_skim/: CMakeLists.txt  chain_files.cpp  final_generated.cpp  final_inclusive.cpp  final_neutrons.cpp  final_tagged.cpp  final_tagged_newnorm.cpp  get_normalization.cpp
include/: bandhit.h  bin_edges.h  calib_helper.h  constants.h  kinematic_cuts.h  taghit.h
inclusive/: CMakeLists.txt  compare.cpp  grid.cpp
inputfiles/: acceptance_inclusive.root  acceptance_tagged.root  migcorrection_inclusive.root  migcorrection_tagged.root  radcorrection_inclusive.root  radcorrection_tagged.root  yield_inclusive.root  yield_tagged.root
nalgorithm/: CMakeLists.txt  nalgo_multiplicities.cpp
neutron_weights/: CMakeLists.txt  grid_neutron.cpp  test_pointing.cpp
photon_align/: CMakeLists.txt  calib_helper.cpp  check_photon_flux.py  check_shifts.py  compare_photon_shifts.py  initial_bar.cpp  initial_run.cpp
plotting/: compare_twomethods.C  datasim_xbxp_as_plot.C  must_plot.C  must_plot_inverted.py  must_plot_virt.C  pn_edep_study.C  pn_xbxp_plot.C  thetan_xpas_plot.C  tofpm_edep_study.C  wp_xpas_plot.C
plotting/2d_plot/inclusive/: Q2_W2_inc.C  xB_Q2_inc.C
plotting/MultiD_binning/: asBins_wpBins_q2_ratios.C  asBins_wpBins_xp_ratios.C  asBins_wpxp.C  asBins_wpxp_ratios.C  asBins_xbBins_Q2_ratios.C  asBins_xpBins_Q2_ratios.C  asBins_xpBins_wp_ratios.C
plotting/dnp_2021_plots/: as.C  aspT.C  edep.C  pT.C  presentation_plot_Edep.py  presentation_plot_ThetaN.py  presentation_plot_ThetaNQ.py  presentation_plot_ToF.py  presentation_plot_as.py  presentation_plot_pT.py  presentation_plot_ratio.py  thetaNQ_raw.C  thetaN_raw.C  tof_raw.C  xbxp.C
plotting/full_plots/: .phinq.C.swp  MAKEFULLPLOTS.sh  Q2.C  W2.C  as.C  dLn.C  dLn_layer.C  mult.C  omega.C  pT.C  pe.C  phie.C  phin.C  phinq.C  phiq.C  pn.C  pn_thetanqslice.C  q.C  thetae.C  thetan.C  thetanq.C  thetaq.C  tof.C  twoD.C  virt.C  vtx.C  vty.C  vtz.C  wp.C  xB.C  xn.C  xp.C  yn.C  zn.C
plotting/full_plots/inclusive/: Q2_inc.C  W2_inc.C  xB_inc.C
plotting/results/: must_plot.C  must_plot_inverted.C
rcdb_info/: CMakeLists.txt  get_gated.cpp
taghit/: taghit.cpp
